# src/api/utils/utils.js
@@ -1,21 +1,21 @@
 function handleUserNames(user) {
   const newUser = user;
 
-  if (user.name && user.lastname && !user.fullname) {
-    newUser.fullname = `${user.name} ${user.lastname}`;
-  } else if (user.fullname && !user.name && !user.lastname) {
-    const names = user.fullname.split(' ');
+  if (user.firstName && user.lastName && !user.name) {
+    newUser.name = `${user.firstName} ${user.lastName}`;
+  } else if (user.name && !user.firstName && !user.lastName) {
+    const names = user.name.split(' ');
     const [first] = names;
-    newUser.name = first;
+    newUser.firstName = first;
     names.splice(0, 1);
-    newUser.lastname = names.length > 0 ? names.join(' ') : '';
+    newUser.lastName = names.length > 0 ? names.join(' ') : '';
   }
 
   return newUser;
 }
 
 function getRandomNumber(min, max) {
-  const num = Math.random() * (max - min) + min;
+  const num = (Math.random() * (max - min)) + min;
   return num.toFixed(2);
 }
 
